# simulation

./: .gitignore  .gitmodules  CMakeLists.txt  main.py
dependencies/: CMakeLists.txt
dependencies/glad/: CMakeLists.txt
dependencies/glad/include/glad/: glad.h
dependencies/glad/src/: glad.c
dependencies/glfw/: CMakeLists.txt
src/: CMakeLists.txt
src/core/: CMakeLists.txt  api.cpp  api.h  surfacemeshdata.h
src/graphics/: CMakeLists.txt  graphics.cpp  graphics.h  meshbuffer.cpp  shader.cpp  shader.h  staticmesh.cpp  staticmesh.h
src/meshing/: CMakeLists.txt  mesh.cpp  mesh.h
tests/: CMakeLists.txt  delaunaytest.cpp  test.cpp
